--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "next": "^14.2.6",
     "next-auth": "5.0.0-beta.19",
     "react": "19.0.0-rc-f38c22b244-20240704",
     "react-dom": "19.0.0-rc-f38c22b244-20240704",
